--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@9gustin/react-notion-render": "^3.11.2",
     "@next/font": "13.1.6",
+    "@notionhq/client": "^2.2.3",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -18,8 +24,10 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   }
 }
