--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "eslint --fix './src/**/*.{js,jsx,ts,tsx}' && prettier --write --ignore-path .gitignore './src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@9gustin/react-notion-render": "^3.11.2",
