--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@notionhq/client": "^2.2.3",
+    "clsx": "^1.2.1",
     "modern-normalize": "^1.1.0",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -23,9 +24,14 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.1",
     "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
+    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   }
