--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@next/font": "13.1.6",
     "@notionhq/client": "^2.2.3",
     "clsx": "^1.2.1",
+    "metascraper": "^5.34.0",
+    "metascraper-description": "^5.33.7",
+    "metascraper-image": "^5.33.7",
+    "metascraper-logo-favicon": "^5.33.8",
+    "metascraper-title": "^5.33.7",
     "modern-normalize": "^1.1.0",
     "next": "13.1.6",
     "react": "18.2.0",
