--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "metascraper-title": "^5.33.7",
     "modern-normalize": "^1.1.0",
     "next": "13.1.6",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-katex": "^3.0.1",
