--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
+    "test:ci": "jest",
     "lint": "next lint",
     "format": "eslint --fix './src/**/*.{js,jsx,ts,tsx}' && prettier --write --ignore-path .gitignore './src/**/*.{js,jsx,ts,tsx}'"
   },
@@ -28,6 +30,9 @@
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -36,11 +41,14 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.1",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
     "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   }
