--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@notionhq/client": "^2.2.3",
+    "async-retry": "^1.3.3",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "metascraper": "^5.34.0",
