--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "metascraper-logo-favicon": "^5.33.8",
     "metascraper-title": "^5.33.7",
     "modern-normalize": "^1.1.0",
-    "next": "13.1.6",
+    "next": "^13.5.5",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,9 +39,15 @@
     "@types/react-dom": "18.0.11",
     "@types/react-katex": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.14",
     "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^13.5.5",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
@@ -51,6 +57,6 @@
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "^5.2.2"
   }
 }
