--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.3",
+    "@udus/notion-components": "^1.0.0-alpha.14",
     "date-fns": "^2.29.3",
     "modern-normalize": "^1.1.0",
     "next": "^13.5.6",
