--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.3",
-    "@udus/notion-components": "^1.0.0-alpha.14",
+    "@udus/notion-components": "^1.0.0-alpha.27",
     "date-fns": "^2.29.3",
+    "katex": "^0.16.9",
     "modern-normalize": "^1.1.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
