--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
     "format": "eslint --fix './src/**/*.{js,jsx,ts,tsx}' && prettier --write --ignore-path .gitignore './src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
-    "@notionhq/client": "^2.2.3",
-    "@udus/notion-components": "^1.0.0-alpha.27",
-    "date-fns": "^2.29.3",
+    "@notionhq/client": "^2.2.14",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@udus/notion-renderer": "^1.0.0-alpha.49",
+    "date-fns": "^3.0.0",
+    "eslint-config-next": "^14.0.4",
     "katex": "^0.16.9",
-    "modern-normalize": "^1.1.0",
-    "next": "^13.5.6",
+    "modern-normalize": "^2.0.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.0",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.34.0",
-    "eslint-config-next": "^13.5.5",
-    "eslint-config-prettier": "^9.0.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "postcss": "^8.4.21",
-    "postcss-nesting": "^11.2.1",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
-    "tailwindcss": "^3.2.7",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.32",
+    "postcss-nesting": "^12.0.2",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.7",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
