--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,6 +38,22 @@
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
       "runtimeExecutable": "pnpm"
+    },
+    {
+      "name": "Debug TypeScript File with ts-node",
+      "type": "node",
+      "request": "launch",
+      "runtimeExecutable": "node",
+      "cwd": "${workspaceRoot}",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ],
+      "args": [
+        "--loader",
+        "ts-node/esm",
+        "${file}"
+      ]
     }
   ]
 }
