--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "udlog",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,8 +14,9 @@
     "@notionhq/client": "^2.2.14",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@udus/notion-renderer": "^1.0.0-alpha.49",
-    "date-fns": "^3.0.0",
+    "@udus/notion-renderer": "^1.0.0-alpha.61",
+    "date-fns": "^2",
+    "dotenv": "^16.3.1",
     "eslint-config-next": "^14.0.4",
     "katex": "^0.16.9",
     "modern-normalize": "^2.0.0",
@@ -43,7 +43,7 @@
     "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.7",
+    "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
