--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "name": "next dev",
       "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/next",
       "runtimeArgs": [
-        "dev"
+        "dev",
+        "--turbo"
       ],
       "cwd": "${workspaceFolder}",
       "smartStep": true,
