--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "udlog",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
