--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@udus/notion-renderer": "^1.0.0-alpha.74",
+    "@udus/notion-renderer": "^1.0.0-alpha.75",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2",
     "dotenv": "^16.3.1",
     "eslint-config-next": "^14.0.4",
+    "feed": "^4.2.2",
     "katex": "^0.16.9",
     "lucide-react": "^0.301.0",
     "modern-normalize": "^2.0.0",
