feat: add code syntax highlight

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
       ],
       "cwd": "${workspaceFolder}",
       "smartStep": true,
+      "console": "integratedTerminal",
       "skipFiles": [
         "<node_internals>/**"
       ],
